--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/ui": "^4.3.0",
+    "@nuxtjs/i18n": "^10.2.1",
     "@prisma/adapter-mariadb": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "mariadb": "^3.4.5",
@@ -18,7 +19,6 @@
     "prisma": "^7.2.0",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.26",
-    "vue-i18n": "^11.2.8",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
