--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,9 @@ on:
 
 jobs:
   deploy:
+    environment: SERVER_HOST
     runs-on: ubuntu-latest
-
+    
     steps:
       - uses: actions/checkout@v3
 
