--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mariadb": "^3.4.5",
     "nuxt": "^4.2.2",
     "tailwindcss": "^4.1.18",
+    "uuid": "^13.0.0",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
