--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuxt": "^4.2.2",
     "tailwindcss": "^4.1.18",
     "uuid": "^13.0.0",
+    "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
