Small rework JSON service

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "emoji-picker-element": "^1.29.0",
     "fabric": "^7.1.0",
     "ioredis": "^5.9.2",
+    "jsonc-parser": "^3.3.1",
     "mariadb": "^3.4.5",
+    "monaco-editor": "^0.55.1",
     "nuxt": "^4.2.2",
     "tailwindcss": "^4.1.18",
     "uuid": "^13.0.0",
