--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "@nuxtjs/i18n": "^10.2.1",
     "emoji-picker-element": "^1.29.0",
     "fabric": "^7.1.0",
+    "fast-xml-parser": "^5.3.6",
     "ioredis": "^5.9.2",
     "jsonc-parser": "^3.3.1",
     "mariadb": "^3.4.5",
     "monaco-editor": "^0.55.1",
     "nuxt": "^4.2.2",
+    "papaparse": "^5.5.3",
     "tailwindcss": "^4.1.18",
     "uuid": "^13.0.0",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.26",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.5.2",
     "sass-embedded": "^1.97.2"
   }
 }
